--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
 </head>
 <body>
     <ol type="i">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Home</li>
+        <li>About</li>
+        <li>Services</li>
+        <li>Work</li>
+        <li>Contact</li>
     </ol>
-    <img style="height: 300px;" src="pexels-image.jpg" alt="">
+    <img src="pexels-image.jpg" alt="image" height="300px">
+
+    <h1>My Table</h1>
     <table border="1">
         <tr>
             <th>name</th>
@@ -51,7 +53,8 @@
         </tr>
     </table>
 
-    <form style="margin: 15px;">
+    <h1>My Form</h1>
+    <form>
         <div>
             <label>Name</label>
             <input type="text" name="name" placeholder="Enter your name">
@@ -85,6 +88,7 @@
             <span>Female</span>
         </div>
     </form>
+    <audio src=""></audio>
 
 </body>
 </html>
